@@ -85,7 +85,7 @@ Usage: fakesmsc [-H host] [-r port] [-i interval] [-m max] [-z <type>] <msg> ...
 *        where the given static elements in <msg> are used as constant prefixes,\n\
 * <msg> is message to send, if several are given, they are sent randomly.\n\
 \n\
-msg format: \"sender receiver type(text|data|ucs2|udh|route|dlr-mask) [udhdata|route|dlrmask] msgdata\"\n\
+msg format: \"sender receiver type(text|data|ucs2|udh-data|udh-text|route|dlr-mask) [udhdata|route|dlrmask] msgdata\"\n\
 \n\
 Type \"text\" means plaintext msgdata, \"data\" urlcoded, \"udh\" url-encoded udh+msg,\n\
 \"ucs2\" unicode url-encoded msgdata and \"route\" means smsbox-id routed plaintext msgdata\n\
